plugin results messages now really can point to a single node

--- a/client/css/Dialogs/PluginResults/PluginResultsDialog.css
+++ b/client/css/Dialogs/PluginResults/PluginResultsDialog.css
@@ -33,6 +33,10 @@
       text-transform: uppercase;
       color: #999999;
       border-bottom: 1px solid #999999; }
+    .plugin-results-dialog .modal-body div.plugin-result .messages .msg .btn-node {
+        color: #999999;
+        font-size: 9px;
+        cursor: pointer; }
   .plugin-results-dialog .modal-body div.plugin-result .artifacts {
     margin-bottom: 5px; }
     .plugin-results-dialog .modal-body div.plugin-result .artifacts .artifacts-title {
