project and import dialogs are functioning again

--- a/client/js/Dialogs/Import/styles/ImportDialog.css
+++ b/client/js/Dialogs/Import/styles/ImportDialog.css
@@ -13,6 +13,7 @@
   padding: 25px;
   text-align: center;
   font-size: 15px;
-  color: #bbbbbb; }
+  color: #bbbbbb;
+  margin-top: 20px; }
   .import-dialog .file-drop-target.hover {
     background-color: rgba(0, 255, 0, 0.2); }
