--- a/client/js/Dialogs/Projects/styles/ProjectsDialog.scss
+++ b/client/js/Dialogs/Projects/styles/ProjectsDialog.scss
@@ -21,6 +21,7 @@
     }
   }
 
+
   .modal-body {
     ul.nav-pills {
       li {
@@ -36,3 +37,6 @@
   }
 }
 
+.txt-project-name {
+  width: 50%;
+}
