--- a/client/js/Dialogs/Commit/templates/CommitDialog.html
+++ b/client/js/Dialogs/Commit/templates/CommitDialog.html
@@ -20,8 +20,8 @@
                 </fieldset>
             </div>
             <div class="modal-footer">
-                <a href="#" class="btn btn-primary disabled btn-commit">Commit</a>
-                <a href="#" class="btn btn-default" data-dismiss="modal">Cancel</a>
+                <button href="#" class="btn btn-primary disabled btn-commit">Commit</button>
+                <button href="#" class="btn btn-default" data-dismiss="modal">Cancel</button>
             </div>
         </div>
     </div>
