--- a/client/js/Dialogs/Import/templates/ImportDialog.html
+++ b/client/js/Dialogs/Import/templates/ImportDialog.html
@@ -14,8 +14,8 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <a href="#" class="btn btn-primary btn-import">Import...</a>
-                <a href="#" class="btn btn-default" data-dismiss="modal">Cancel</a>
+                <button href="#" class="btn btn-primary btn-import">Import...</button>
+                <button href="#" class="btn btn-default" data-dismiss="modal">Cancel</button>
             </div>
         </div>
     </div>
