--- a/client/js/Widgets/DiagramDesigner/styles/DiagramDesignerWidget.scss
+++ b/client/js/Widgets/DiagramDesigner/styles/DiagramDesignerWidget.scss
@@ -5,17 +5,17 @@
  *
  */
 
-@import "Connector";
+@import "../../../../scss/Widgets/DiagramDesigner/Connector";
 
 $diagram-designer-selection-rubber-band-background-color: rgba(219, 234, 252, 0.49);
 $diagram-designer-selection-rubber-band-border-color: #52A8EC;
 $diagram-designer-selection-outline-background-color: rgba(255, 255, 0, 0.05);
 $diagram-designer-selection-outline-border: rgba(0,0,0,0.5) dashed 1px;
 $diagram-designer-selection-outline-shadow-start: rgba(0, 0, 0, 0.075);
-$diagram-designer-selection-outline-shadow-end: rgba(0, 0, 0, 0.6);
+$diagram-designer-selection-outline-shadow-end: rgba(0, 0, 0, 0.3);
 $diagram-designer-selection-outline-s-btn-background-color: #FFFFFF;
 $diagram-designer-selection-outline-s-btn-shadow-start: rgba(0, 0, 0, 0.075);
-$diagram-designer-selection-outline-s-btn-shadow-end: rgba(0, 0, 0, 0.6);
+$diagram-designer-selection-outline-s-btn-shadow-end: rgba(0, 0, 0, 0.3);
 
 /*error decorator properties*/
 $error-decorator-background-color: #F2DEDE;
@@ -74,15 +74,17 @@ $tabs-container-height: 26px;
       .s-btn {
         position: absolute;
         background-color: $diagram-designer-selection-outline-s-btn-background-color;
-        border: 2px solid #000000;
+        border: none;
         line-height: 14px;
-        padding: 3px;
-        border-radius: 12px;
+        padding: 3px 4px;
+        border-radius: 6px;
         pointer-events: all;
         cursor: pointer;
         -webkit-box-shadow: inset 0 1px 1px $diagram-designer-selection-outline-s-btn-shadow-start 0 0 8px $diagram-designer-selection-outline-s-btn-shadow-end;
         -moz-box-shadow: inset 0 1px 1px $diagram-designer-selection-outline-s-btn-shadow-start, 0 0 8px $diagram-designer-selection-outline-s-btn-shadow-end;
         box-shadow: inset 0 1px 1px $diagram-designer-selection-outline-s-btn-shadow-start, 0 0 8px $diagram-designer-selection-outline-s-btn-shadow-end;
+        background-color: #000;
+        color: #fff;
 
         &.delete {
           top: -13px;
@@ -106,6 +108,10 @@ $tabs-container-height: 26px;
           top: -13px;
           left: 50%;
           margin-left: -13px;
+        }
+
+        &:hover {
+          background-color: #428bca;
         }
       }
 
