--- a/client/js/PanelBase/styles/PanelBaseWithHeader.css
+++ b/client/js/PanelBase/styles/PanelBaseWithHeader.css
@@ -103,10 +103,10 @@
   position: relative;
   padding: 0px;
   margin-bottom: 2px;
-  border: 1px solid #e9e9e9;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
+  border: 0;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0;
   background-color: whitesmoke; }
   .side-panel .panel-base-wh .panel-header {
     padding: 3px;
@@ -127,10 +127,7 @@
       display: block; }
   .side-panel .panel-base-wh .panel-body {
     background-color: whitesmoke;
-    padding-top: 3px;
-    padding-bottom: 3px;
-    padding-left: 0px;
-    padding-right: 0px; }
+    padding: 0; }
   .side-panel .panel-base-wh.read-only .panel-body {
     background-color: #fbfbfb; }
   .side-panel .panel-base-wh.active-panel .panel-header {
