--- a/client/js/Panels/Visualizer/styles/VisualizerPanel.scss
+++ b/client/js/Panels/Visualizer/styles/VisualizerPanel.scss
@@ -5,7 +5,7 @@
     margin-left: 7px;
     margin-top: -3px;
   }
-  
+
   ul.nav {
     margin-bottom: 0;
     li {
@@ -16,15 +16,15 @@
   }
 
   .pp {
-    text-align: center;
+    text-align: left;
+    padding: .5ex 1ex;
     font-size: 11px;
     font-weight: bold;
     line-height: 18px;
     color: #999;
-    background-color: #ddd;
     text-transform: uppercase;
-    margin-right: 0;
-    margin-left: 0;
+    margin: 0 0 1px 0;
+    background-color: #fff;
   }
 }
 
