footer icon cartets fixed

--- a/client/css/webgme_bootstrap_overrides.css
+++ b/client/css/webgme_bootstrap_overrides.css
@@ -99,8 +99,8 @@
     line-height: 15px;
 }
 
-.btn-micro .caret{
-    margin-top: 5px;
+.btn-micro > i:empty{
+    margin-right: .75ex;
 }
 
 .btn-micro [class^="icon-"],
