--- a/client/css/themes/dawn.css
+++ b/client/css/themes/dawn.css
@@ -1,3 +1,9 @@
+a {
+  color: #3160ab; }
+
+a:hover {
+  color: #00235b; }
+
 .toolbar-container a {
   color: #00235b;
   transition: background-color .2s; }
@@ -10,3 +16,9 @@
   box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.125); }
 .toolbar-container .btn.active:hover {
   color: #00235b; }
+
+.nav-pills > li.active > a,
+.nav-pills > li.active > a:hover,
+.nav-pills > li.active > a:focus {
+  background: #00235b;
+  border-radius: 0; }
