--- a/client/css/webgme_bootstrap_overrides.css
+++ b/client/css/webgme_bootstrap_overrides.css
@@ -235,7 +235,23 @@ input[type="submit"].btn.btn-micro {
     margin-bottom: 0;
 }
 
+.nav-tabs>li>a {
+    border-radius: 0;
+}
 
+.nav-tabs>li.active>a,
+.nav-tabs>li.active>a:hover,
+.nav-tabs>li.active>a:focus {
+    border: 1px solid #C0C0C0;
+    border-bottom-color: transparent;
+}
+
+.nav-tabs>li>a>i:empty {
+    margin-left: .5ex;
+    font-size: 110%;
+    position: relative;
+    top: -20%;
+}
 
 /* Forms */
 
