panel header floating title fixes

--- a/client/css/themes/dawn.css
+++ b/client/css/themes/dawn.css
@@ -20,5 +20,5 @@ a:hover {
 .nav-pills > li.active > a,
 .nav-pills > li.active > a:hover,
 .nav-pills > li.active > a:focus {
-  background: #00235b;
+  background: #A5AFBE;
   border-radius: 0; }
