--- a/client/js/PanelBase/styles/PanelBaseWithHeader.css
+++ b/client/js/PanelBase/styles/PanelBaseWithHeader.css
@@ -9,22 +9,16 @@
   .panel-base-wh .panel-header {
     background-color: #efefef;
     border-bottom: 3px solid transparent;
-    /*overflow: visible;
-    overflow-x: hidden;*/
-    white-space: nowrap;
-    /*.ro-icon {
-      display: none;
-      margin-right: 2px;
-      position: absolute;
-    }*/ }
+    white-space: nowrap; }
     .panel-base-wh .panel-header .panel-header-title {
-      font-size: 14px;
-      line-height: 14px;
-      font-weight: bold;
+      font-size: 21px;
+      line-height: 21px;
+      font-weight: 400;
       display: inline-block;
       margin-right: 10px;
       margin-left: 5px;
-      white-space: nowrap; }
+      white-space: nowrap;
+      margin-top: 8px; }
     .panel-base-wh .panel-header .panel-header-toolbar .toolbar-group {
       margin-left: 10px; }
       .panel-base-wh .panel-header .panel-header-toolbar .toolbar-group.toolbar-group-small-margin {
@@ -57,45 +51,39 @@
     background-color: white; }
   .panel-base-wh .floating-title {
     position: absolute;
-    top: 0px;
-    left: 0px;
-    background-color: white;
-    border-bottom-right-radius: 10px;
-    -webkit-box-shadow: 0px 0px 5px 2px #cccccc;
-    -moz-box-shadow: 0px 0px 5px 2px #cccccc;
-    box-shadow: 0px 0px 5px 2px #cccccc; }
+    left: 0;
+    box-shadow: 0;
+    text-shadow: 1.5px 1.5px 0 rgba(0, 0, 0, 0.15);
+    opacity: .65;
+    color: #555555; }
     .panel-base-wh .floating-title .ro-icon {
       position: relative;
       top: -1px;
       left: 2px;
       margin-right: 1.2ex; }
     .panel-base-wh .floating-title .panel-header-title {
-      font-size: 14px;
-      line-height: 14px;
-      font-weight: bold;
+      font-size: 21px;
+      line-height: 21px;
+      font-weight: 400;
       display: inline-block;
       margin-right: 10px;
       margin-left: 5px;
       white-space: nowrap;
-      margin-top: 3px; }
+      margin-top: 8px; }
       .panel-base-wh .floating-title .panel-header-title:empty {
         display: none; }
   .panel-base-wh.read-only .ro-icon {
     display: inline-block; }
   .panel-base-wh.read-only .panel-body {
     background-color: #fbfbfb; }
-  .panel-base-wh.read-only .floating-title {
-    background-color: #fbfbfb; }
   .panel-base-wh.active-panel .panel-header {
-    border-bottom-color: rgba(82, 168, 236, 0.8); }
+    border-bottom-color: #00235b;
+    background: white; }
   .panel-base-wh.active-panel .floating-title {
-    -webkit-box-shadow: 0px 0px 5px 2px rgba(82, 168, 236, 0.8);
-    -moz-box-shadow: 0px 0px 5px 2px rgba(82, 168, 236, 0.8);
-    box-shadow: 0px 0px 5px 2px rgba(82, 168, 236, 0.8); }
+    opacity: 0.85;
+    color: #00235b; }
   .panel-base-wh.active-panel .absolute-header {
-    -webkit-box-shadow: 0px 0px 5px 2px rgba(82, 168, 236, 0.8);
-    -moz-box-shadow: 0px 0px 5px 2px rgba(82, 168, 236, 0.8);
-    box-shadow: 0px 0px 5px 2px rgba(82, 168, 236, 0.8); }
+    border: 1px solid #00235b; }
   .panel-base-wh.w-tabs .floating-title {
     top: 30px; }
 
@@ -131,4 +119,4 @@
   .side-panel .panel-base-wh.read-only .panel-body {
     background-color: #fbfbfb; }
   .side-panel .panel-base-wh.active-panel .panel-header {
-    border-bottom-color: rgba(82, 168, 236, 0.8); }
+    border-bottom-color: #00235b; }
